Implemented comments for items